--- a/app/globals.css
+++ b/app/globals.css
@@ -7,3 +7,13 @@ body,
 :root {
   @apply h-full bg-12;
 }
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type="number"] {
+  -moz-appearance: textfield;
+}
